--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
  p {
     font-size: 14px;
     font-weight: 400;
-    padding: 6px 24px 16px;
+    padding: 6px 24px 16px 24px;
   }
   
 .banner-wrap {
@@ -35,8 +35,8 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 32px;
     height: 56px;
+    padding: 0 32px;
 }
 .nav-item {
     padding: 5px 15px;
@@ -58,8 +58,8 @@ nav {
 
 main {
     text-align: center;
-     height: calc(100vh - 56px);
-     /* so cool */
+    height: calc(100vh - 56px);
+    /* so cool */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
